Fixed Alignment of Newsletter Section

--- a/css/index.css
+++ b/css/index.css
@@ -1986,7 +1986,7 @@
      .container-section7 {
          height: 100%;
          display: flex;
-         justify-content: space-around;
+         justify-content: space-between;
          align-items: center;
      }
 
@@ -2033,7 +2033,7 @@
             height: 100%;
             display: flex;
             flex-flow: row wrap;
-            justify-content: space-around;
+            justify-content: space-between;
             align-items: center;
         }
    
@@ -2084,7 +2084,7 @@
             height: 100%;
             display: flex;
             flex-flow: row wrap;
-            justify-content: space-around;
+            justify-content: space-between;
             align-items: center;
         }
    
